# nmos-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: test.yml
model/: Cargo.toml
model/src/: lib.rs  tai.rs  version.rs
model/src/resource/: device.rs  flow.rs  mod.rs  node.rs  receiver.rs  sender.rs  source.rs
nmos-node/: Cargo.toml
nmos-node/examples/: simple_node.rs
nmos-node/src/: error.rs  lib.rs
nmos-node/src/node/: mdns.rs  mod.rs  service.rs
nmos-schema/: Cargo.toml
nmos-schema/src/is_04/: mod.rs
nmos-schema/src/is_04/v1_0_x/: device.rs  flow.rs  mod.rs  node.rs  registrationapi.rs
nmos-schema/tests/: is_04.rs
node/: Cargo.toml
node/examples/: gstreamer.rs  simple_node.rs
node/src/: error.rs  event_handler.rs  lib.rs  mdns.rs
node/src/api/: error.rs  mod.rs  node.rs  registration.rs
node/src/node/: event_handler.rs  mdns.rs  mod.rs
node/src/service/: error.rs  mod.rs  node_api.rs  response.rs
node/src/service/node/: mod.rs
schema/: Cargo.toml  build.rs
schema/src/: lib.rs
schema/src/is_04/: v1_0_x.rs
schema/tests/: is_04.rs
schema/tests/examples/is_04/: nodeapi-v1.0-flows-get-200.json
