[package]
name = "nmos-node"
version = "0.1.0"
edition = "2021"

[dependencies]
nmos-schema = { path = "../nmos-schema" }
async-trait = "0.1"
futures = "0.3"
hyper = { version = "0.14", features = ["http1", "server", "runtime"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
