[package]
name = "nmos-node"
version = "0.1.0"
authors = ["Rufus Uttley <rufusuttley@live.co.uk>"]
edition = "2021"
homepage = "https://github.com/rufusutt/nmos-rs"
repository = "https://github.com/rufusutt/nmos-rs"
license = "Apache-2.0"
rust-version = "1.56"

[dependencies]
nmos-schema = { path = "../schema" }
nmos-model = { path = "../model" }
async-trait = "0.1"
axum = { version = "0.5", default-features = false, features = ["http1", "json", "original-uri", "tower-log"] }
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "sync", "time"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1", features = ["serde"] }
zeroconf = "0.10"

[dev-dependencies]
gstreamer = "0.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
