[package]
name = "nmos-node"
version = "0.1.0"
authors = ["Rufus Uttley <rufusuttley@live.co.uk>"]
edition = "2021"
homepage = "https://github.com/rufusutt/nmos-rs"
repository = "https://github.com/rufusutt/nmos-rs"
license = "Apache-2.0"
rust-version = "1.56"

[dependencies]
async-trait = "0.1"
axum = { version = "0.6", default-features = false, features = ["http1", "json", "original-uri", "tower-log", "tokio"] }
axum-extra = { version = "0.7" }
futures = "0.3"
nmos-model = { path = "../model" }
nmos-schema = { path = "../schema" }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.4", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1", features = ["serde"] }
zeroconf = "0.11"

[dev-dependencies]
gstreamer = "0.21"
tracing-subscriber = "0.3"
