[package]
name = "nmos-schema"
version = "0.1.0"
authors = ["Rufus Uttley <rufusuttley@live.co.uk>"]
edition = "2021"
homepage = "https://github.com/rufusutt/nmos-rs"
repository = "https://github.com/rufusutt/nmos-rs"
license = "Apache-2.0"
rust-version = "1.56"

[dependencies]
schemafy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
convert_case = "0.6"
serde_json = "1"
